--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -11,16 +11,16 @@ jobs:
     name: Windows Export
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:mono-4.2.1
+      image: barichello/godot-ci:mono-4.3
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           lfs: true
-      - name: Setup
-        run: |
-          mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable.mono ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable.mono
+#      - name: Setup
+#        run: |
+#          mkdir -v -p ~/.local/share/godot/export_templates/
+#          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable.mono ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable.mono
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
@@ -36,7 +36,7 @@ jobs:
 #    name: Linux Export
 #    runs-on: ubuntu-20.04
 #    container:
-#      image: barichello/godot-ci:mono-4.2.1
+#      image: barichello/godot-ci:mono-4.3
 #    steps:
 #      - name: Checkout
 #        uses: actions/checkout@v4
@@ -61,7 +61,7 @@ jobs:
 #    name: Web Export
 #    runs-on: ubuntu-20.04
 #    container:
-#      image: barichello/godot-ci:mono-4.2.1
+#      image: barichello/godot-ci:mono-4.3
 #    steps:
 #      - name: Checkout
 #        uses: actions/checkout@v4
@@ -94,7 +94,7 @@ jobs:
 #    name: Mac Export
 #    runs-on: ubuntu-20.04
 #    container:
-#      image: barichello/godot-ci:mono-4.2.1
+#      image: barichello/godot-ci:mono-4.3
 #    steps:
 #      - name: Checkout
 #        uses: actions/checkout@v4
